trying to fix checkbox alignment

--- a/style.css
+++ b/style.css
@@ -235,6 +235,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-left: 18px; /* Add this for uniform left margin */
+  box-sizing: border-box;
 }
 
 /* Infobox stack */
